Closed Bug 245359 Opened 21 years ago Closed 21 years ago

[10.2] when home page preference is set to 'blank' or 'use system home page' (which is 'blank') no window opens

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: lougee, Assigned: mikepinkerton)

References

Details

(Keywords: fixed1.7.6)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040517 Camino/0.8b Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040517 Camino/0.8b Unless I have a specific home page set in Camino's preferences, no window at all opens on program startup. Selecting 'new window' doesn't open anything either. I either have to go back and specify a home page (ANY home page) or open some link from my history or bookmarks. G4 iMac, OS 10.2.8, 740 mb RAM, Camino o.8b Reproducible: Always Steps to Reproduce: 1.set Camino home page preferences to either blank or if your system setting is for a blank home page, then 'use system home page' 2.restart Camino 3. Actual Results: no window opens Expected Results: opened a blank window/tab
is there anything on the console? this works for me, i use it this way every day (home page is empty, ""). or do you actually mean setting it to the text "blank"? that's not a valid url. try "about:blank" to get the desired behavior.
No, I didn't enter "blank" for the home page. <G><G> I had set the system home page option to "", then set the Camino preferences to "use system home page" ("" in the 'home page' location box in Camino preferences). In this instance, Camino acts as I described -- nothing opens. If I uncheck 'use system home page' without making any other changes, all is well. Don't know what I was thinking... Seems to be a non-bug after all. sorry for taking your time. Abbe
Well, no, lougee, there would still be a valid bug in there. However, WFM using 0.8b on OS X 10.3.4. I set the system home page to "" (in Safari, of course), and set Camino to use sysetm home page and show the home page in new windows. Camino starts and displays a new blank window successfully. Someone else who still has OS X 10.2.x should test this.
I can reproduce this on 10.2.8, using 0.8 final -- with "use system homepage" selected and a blank system homepage, a browser window cannot be opened by starting the application or with the "New Window" menu item (or keyboard shortcut). Open Location works properly; I haven't tested using bookmarks. On startup or attempting to open a new window, the console displays the following: 2004-06-29 20:54:12.662 Camino[5505] ICGetPref returned empty string 2004-06-29 20:54:12.850 Camino[5505] ICGetPref returned empty string 2004-06-29 20:54:12.850 Camino[5505] *** Assertion failure in -[AutoCompleteTextCell _objectValue:forString:], AppKit.subproj/NSCell.m:1079 2004-06-29 20:54:12.857 Camino[5505] Invalid parameter not satisfying: aString != nil
I can't confirm on my 10.2.8 machine. Noemi, lougee where your test done with clean profiles ? I do see the assert though.
Summary: when home page preference is set to 'blank' or 'use system home page' (which is 'blank') no window opens → [10.2] when home page preference is set to 'blank' or 'use system home page' (which is 'blank') no window opens
Target Milestone: --- → Camino0.9
Attachment #152833 - Flags: review?
looks reasonable to me. r=pink.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment on attachment 152833 [details] [diff] [review] One liner patch to solve the problem r-, better patch coming
Attachment #152833 - Flags: review? → review-
Attached patch better patchSplinter Review
a better patch
Attachment #152833 - Attachment is obsolete: true
landed on trunk. should we add this to the 0.8.1 list?
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Blocks: 249077
(In reply to comment #10) > landed on trunk. should we add this to the 0.8.1 list? I added it to the list ...
I'm new to this 'debugging game' and feeling a little out of my league. How do I apply either of these patches? Abbe
(In reply to comment #12) > I'm new to this 'debugging game' and feeling a little out of my league. How do > I apply either of these patches? patch < patchfile
landed on branch
Blocks: 261393
Blocks: 279168
Keywords: fixed1.7.6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: