better error handling from IC, if we can't load the homepage, use about:blank (bug 245359)